# tapeshnik

./: .gitignore  README.md
HelloFOC/HelloFOC/: .gitignore  platformio.ini
HelloFOC/HelloFOC/src/: deckcontrol.h  main.cpp  util.cpp  util.h
HelloFOC/HelloFOC/src/PMW3360/: PMW3360.cpp  PMW3360.h
codec/: cmfm.c  codec.py
docs/: FUTURISTIC.md  NOTES.md  index.md
hardware/tapeshnik-mecha/foc/: README.md  foc.kicad_pcb  foc.kicad_prl  foc.kicad_pro  foc.kicad_sch  fp-info-cache
hardware/tapeshnik-mecha/platen-heads/: README.md  fp-info-cache  platen-heads.kicad_pcb  platen-heads.kicad_prl  platen-heads.kicad_pro  platen-heads.kicad_sch
hardware/tapeshnik-mecha/platen-heads-butter/: README.md  fp-info-cache  platen-heads-butter.kicad_pcb  platen-heads-butter.kicad_prl  platen-heads-butter.kicad_pro  platen-heads-butter.kicad_sch
hardware/tapeshnik-mecha/platen-motors/: README.md  fp-info-cache  platen-motors-2813.kicad_pcb  platen-motors-2813.kicad_pro  platen-motors.kicad_pcb  platen-motors.kicad_prl  platen-motors.kicad_pro  platen-motors.kicad_sch
hardware/tapeshnik-mecha/pwm3389_pcb_edge/: README.md  fp-lib-table  pwm3389_pcb_edge.kicad_pcb  pwm3389_pcb_edge.kicad_prl  pwm3389_pcb_edge.kicad_pro  pwm3389_pcb_edge.kicad_sch
hardware/tapeshnik-proto/: fp-info-cache  tapeshnik-proto.kicad_pcb  tapeshnik-proto.kicad_prl  tapeshnik-proto.kicad_pro  tapeshnik-proto.kicad_sch
hardware/tapeshnik-proto2/: tapeshnik-proto.kicad_pcb  tapeshnik-proto.kicad_prl  tapeshnik-proto.kicad_pro  tapeshnik-proto.kicad_sch
hardware/tapeshnik-proto2/production/tapeshnik-proto_2023-08-20_15-52-43/: bom.csv  designators.csv  netlist.ipc  positions.csv
libcorrect/: README
libcorrect/include/: correct.h
mecha/: README.md
mecha/production/: README.md  bracket-l.stl  bracket-r.stl  narrow_flange.stl  rear-bracket.stl  servobracket.stl  spindle.stl
pico/: CMakeLists.txt  build-load.sh
pico/pico/: CMakeLists.txt  bitstream.c  bitstream.cpp  bitstream.h  bitstream.pio  config.h  crc.c  crc.h  ctags.sh  debounce.cpp  debounce.h  mainloop.h  mfm.cpp  mfm.h  plaintext.cpp  readloop.cpp  readloop.h  sectors.cpp  sectors.h  tacho.c  tacho.cpp  tacho.h  tapeshnik.c  tapeshnik.cpp  util.cpp  util.h  wheel.c  wheel.cpp  wheel.h
